# qq-offlinefile-sender

./: .gitignore  .gitmodules  CMakeLists.txt  QQOfflineFileSender.pro  README.md  askvc.cpp  askvc.hpp  askvc.ui  buddymodel.cpp  buddymodel.hpp  dialog.cpp  dialog.hpp  dialog.ui  main.cpp
soci/src/core/: soci_backends_config.h
